compiler/typ/tests/fixtures/diagnostics/0526_modules_alias_hidden_annotation_mismatch_09.ml.infer.expected
File "0526_modules_alias_hidden_annotation_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0526_modules_alias_hidden_annotation_mismatch_09 is not a valid module name.

File "0526_modules_alias_hidden_annotation_mismatch_09.ml", line 14, characters 14-26:
14 | let _ : int = Alias_iota.x
                   ^^^^^^^^^^^^
Error: The value Alias_iota.x has type Alias_iota.t = Hidden_iota.t
       but an expression was expected of type int
